--- a/webcomponents/tests/HTMLImports/currentScript.html
+++ b/webcomponents/tests/HTMLImports/currentScript.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
 <head>
-
+  
   <title>_currentScript Test</title>
   
   <script src="../tools/htmltest.js"></script>
   <script src="../tools/chai/chai.js"></script>
-  
-  <script src="../../HTMLImports/htmlimports.debug.js"></script>
-  
+
+  <script src="../../src/HTMLImports/HTMLImports.js"></script>  
+
   <link rel="import" href="imports/script-1.html">
   
 </head>
 <body>
-
+  
   <script>
     function test() {
       chai.assert.equal(document._currentScript, document.currentScript, '_currentScript reflects currentScript');
@@ -21,7 +21,11 @@
       done();
     }
 
-    HTMLImports.whenReady(test);
+    if (HTMLImports.ready) {
+      test();
+    } else {
+      addEventListener('HTMLImportsLoaded', test);
+    }
   </script>
   
 </body>
