--- a/webcomponents/tests/HTMLImports/imports/load-1.html
+++ b/webcomponents/tests/HTMLImports/imports/load-1.html
@@ -1,8 +1,8 @@
 <script>
   load1 = true;
-  //console.log('hi from', document._currentScript.ownerDocument.baseURI);
 </script>
-<style onload="console.log('inline load!');">
+
+<style>
   @import 'sheet1.css';
 
   .image {
@@ -11,4 +11,5 @@
     width: 538px;
   }
 </style>
+
 <link rel="stylesheet" href="sheet2.css">
