--- a/webcomponents/tests/MutationObservers/index.html
+++ b/webcomponents/tests/MutationObservers/index.html
@@ -5,10 +5,13 @@ Use of this source code is governed by a BSD-style
 license that can be found in the LICENSE file.
 -->
 <meta charset="utf-8">
-<link rel="stylesheet" href="../node_modules/mocha/mocha.css">
-<script src="../node_modules/chai/chai.js"></script>
-<script src="../node_modules/mocha/mocha.js"></script>
+
+<link rel="stylesheet" href="../tools/mocha/mocha.css">
+<script src="../tools/chai/chai.js"></script>
+<script src="../tools/mocha/mocha.js"></script>
+
 <script src="../mutation-observers.js"></script>
+
 <script>
 
 mocha.setup({
