--- a/webcomponents/tests/HTMLImports/dynamic-elements.html
+++ b/webcomponents/tests/HTMLImports/dynamic-elements.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html>
 <head>
-
-  <title>HTML Imports Dynamic Elements</title>
   
+  <title>HTML Imports Dynamic Elements</title>
+
   <script src="../tools/htmltest.js"></script>
   <script src="../tools/chai/chai.js"></script>
-  
-  <script src="../../HTMLImports/htmlimports.debug.js"></script>
+
+  <script src="../../src/HTMLImports/HTMLImports.js"></script>  
   
   <link rel="import" href="imports/dynamic-elements-import.html">
   
 </head>
 <body>
-
+  
   <div id="asyncStyled">red?</div>
 
   <script>
     document.addEventListener('asyncElementsAdded', function() {
-      HTMLImports.whenReady(function() {
+      HTMLImports.whenImportsReady(function() {
         chai.assert.isTrue(window.asyncScript, 'async added script ran');
         var computed = getComputedStyle(document.querySelector('#asyncStyled'));
         chai.assert.equal(computed.backgroundColor, 'rgb(255, 0, 0)', 'async added style applied');
