--- a/webcomponents/tests/HTMLImports/imports/style-paths-import.html
+++ b/webcomponents/tests/HTMLImports/imports/style-paths-import.html
@@ -6,7 +6,7 @@
 </template>
 
 <style>
-  @import '../stuff/sheet.css';
+  @import '../stuff/404.css';
   @import 'sheet1.css';
   @import url(//fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,800|Source+Code+Pro);
 
