--- a/webcomponents/tests/HTMLImports/load.html
+++ b/webcomponents/tests/HTMLImports/load.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-
   <title>load event Test</title>
   
   <script>
@@ -26,22 +25,21 @@
   
   <script src="../tools/htmltest.js"></script>
   <script src="../tools/chai/chai.js"></script>
-  
-  <script src="../../HTMLImports/htmlimports.debug.js"></script>
+
+  <script src="../../src/HTMLImports/HTMLImports.js"></script>  
   
   <link rel="import" href="imports/load-1.html" onload="importLoaded(event)">
   <link rel="import" href="imports/load-2.html" onload="importLoaded(event)">
   
-  <!-- 
-    TODO(sorvell): note, native imports currently fires onload for 404
-    documents. This doesn't really make sense, check spec. 
-    See: https://code.google.com/p/chromium/issues/detail?id=336609
+  <!-- TODO(sorvell): note, native imports currently fires onload for 404
+  documents. This doesn't really make sense, check spec. 
+  See: https://code.google.com/p/chromium/issues/detail?id=336609
   -->
   <link rel="import" href="imports/404.html" onload="importError(event)" onerror="importError(event)">
   
 </head>
 <body>
-
+  
   <div id="test1" class="red">Test</div>
   <div id="test2" class="blue">Test</div>
   <div id="test3" class="image"></div>
