--- a/webcomponents/tests/HTMLImports/parser.html
+++ b/webcomponents/tests/HTMLImports/parser.html
@@ -7,7 +7,7 @@
   <script src="../tools/htmltest.js"></script>
   <script src="../tools/chai/chai.js"></script>
   
-  <script src="../../HTMLImports/htmlimports.debug.js"></script>
+  <script src="../../src/HTMLImports/HTMLImports.js"></script>
   
   <link rel="import" href="imports/parsed-import-1.html">
 
