--- a/skunkwerk/generation-2/impelement-9/polymer/template.html
+++ b/skunkwerk/generation-2/impelement-9/polymer/template.html
@@ -8,7 +8,7 @@
     var a = _preprocess(template.content, map);
     if (a) {
       a.map = map;
-      console.log(a.map);
+      //console.log(a.map);
     }
     template.map = map;
   };
