--- a/skunkwerk/generation-2/impelement-a/elements/x-item.html
+++ b/skunkwerk/generation-2/impelement-a/elements/x-item.html
@@ -29,10 +29,10 @@
   </style>
 
   <x-icon icon="box" on-click="click"></x-icon><x-icon icon="apps"></x-icon><x-icon icon="archive"></x-icon>
-  <from flex><span>{{from}}</span><span>{{fromCount}}</span></from>
-  <span flex five><subject>{{subject}}</subject> - <blurb>{{blurb}}</blurb></span>
+  <from flex><span>[[from]]</span><span>[[fromCount]]</span></from>
+  <span flex five><subject>[[subject]]</subject> - <blurb>[[blurb]]</blurb></span>
   <x-icon icon="apps"></x-icon>
-  <date>{{date}}</date>
+  <date>[[date]]</date>
 
 </template>
 <script>
@@ -41,25 +41,10 @@
     name: 'x-item',
     _attributes: 'horizontal center layout',
     created: function() {
-      this.findNodes();
+      this.publishProperty('item');
+      this.watch('item', this.itemChanged.bind(this));
     },
-    findNodes: function() {
-      /*
-      var $ = this.root.querySelector.bind(this.root);
-      this.$ = {
-        from: $('from'),
-        subject: $('subject'),
-        blurb: $('blurb'),
-        date: $('date')
-      };
-      */
-    },
-    setItem: function(item) {
-      //this.$.from.textContent = item.from + ' ' + item.count;
-      //this.$.subject.textContent = item.subject;
-      //this.$.blurb.textContent = item.blurb;
-      //this.$.date.textContent = item.date;
-      //
+    itemChanged: function(item) {
       this.from = item.from;
       this.fromCount = item.count;
       this.blurb = item.blurb + '.';
