--- a/skunkwerk/generation-2/impelement-a/elements.html
+++ b/skunkwerk/generation-2/impelement-a/elements.html
@@ -2,6 +2,7 @@
 <link rel="import" href="elements/x-icon.html">
 <link rel="import" href="elements/x-item.html">
 <link rel="import" href="elements/x-label.html">
+<link rel="import" href="elements/x-contact-item.html">
 <link rel="import" href="elements/x-icon-button.html">
 <link rel="import" href="elements/x-drop-button.html">
 <link rel="import" href="elements/x-ad.html">
