--- a/skunkwerk/generation-2/impelement-a/elements/x-appbar.html
+++ b/skunkwerk/generation-2/impelement-a/elements/x-appbar.html
@@ -27,7 +27,7 @@
     <x-icon icon="apps"></x-icon>
     <x-icon icon="archive"></x-icon>
     <button>Share</button>
-    <img avatar src="assets/fu.jpg">
+    <img avatar src="assets/avatar-01.png">
   </x-toolbar>
 
 </template>
