--- a/skunkwerk/generation-2/impelement-a/elements/x-contactbar.html
+++ b/skunkwerk/generation-2/impelement-a/elements/x-contactbar.html
@@ -17,7 +17,7 @@
   </style>
 
   <x-toolbar>
-    <img avatar src="assets/fu.jpg" style="margin-left: 0;"></img>
+    <img avatar src="assets/avatar-00.png" style="margin-left: 0;"></img>
     <x-drop-button style="border: none; background-color: inherit;">User</x-drop-button>
     <span flex></span>
     <x-icon-button icon="search"></x-icon-button>
