--- a/skunkwerk/generation-2/impelement-a/polymer/template.html
+++ b/skunkwerk/generation-2/impelement-a/polymer/template.html
@@ -19,9 +19,10 @@
 
   var preprocessTextNode = function(node, map) {
     var t = node.textContent;
-    if (t.indexOf('{{') >= 0  || t.indexOf('[[') >= 0) {
+    if (t.indexOf('{{') === 0  || t.indexOf('[[') === 0) {
       var annotations = Object.create(null);
       annotations.name = 'text';
+      annotations.value = t;
       map.push(annotations);
       return annotations;
     }
@@ -41,13 +42,16 @@
       var b$ = annotations.bindings = Object.create(null);
       var e$ = annotations.events = Object.create(null);
       for (var i=0, a; a=node.attributes[i]; i++) {
-        var n = a.name;
-        if (n.indexOf('{{') != -1) {
-          b$[n] = a.value;
+        var n = a.name, v = a.value;
+        if (v.indexOf('{{') === 0) {
+          b$[n] = {
+            raw: v,
+            prop: v.slice(2, -2)
+          };
           bound = true;
         }
         if (n.slice(0, 3) === 'on-') {
-          e$[n.slice(3)] = a.value;
+          e$[n.slice(3)] = v;
           bound = true;
         }
       }
