skunkwerk in progress

--- a/skunkwerk/generation-3/polymer-1/polymer/base.html
+++ b/skunkwerk/generation-3/polymer-1/polymer/base.html
@@ -49,6 +49,9 @@
         attributes(this, this._attributes);
       }
     },
+    $: function(slctr) {
+      return this.root.querySelector(slctr);
+    },
     created: function() {
     }
   };
