revamped data.html

--- a/skunkwerk/generation-3/polymer-1/elements/x-drop-button.html
+++ b/skunkwerk/generation-3/polymer-1/elements/x-drop-button.html
@@ -16,7 +16,7 @@
 
   Polymer({
     name: 'x-drop-button',
-    _attributes: 'horizontal center layout',
+    _attributes: 'center horizontal inline layout',
     attributeChanged: function(name) {
       switch (name) {
         case 'active':
