--- a/skunkwerk/generation-3/polymer-1/projects/mail/assets/icons.html
+++ b/skunkwerk/generation-3/polymer-1/projects/mail/assets/icons.html
@@ -6,6 +6,7 @@
   <g id="arrow-drop-down"><polygon points="7,10 12,15 17,10 "/></g>
   <g id="info-outline"><path d="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10c5.5,0,10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8c4.4,0,8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z"/></g>
   <g id="search"><path d="M15.5,14h-0.8l-0.3-0.3c1-1.1,1.6-2.6,1.6-4.2C16,5.9,13.1,3,9.5,3C5.9,3,3,5.9,3,9.5S5.9,16,9.5,16c1.6,0,3.1-0.6,4.2-1.6l0.3,0.3v0.8l5,5l1.5-1.5L15.5,14z M9.5,14C7,14,5,12,5,9.5S7,5,9.5,5C12,5,14,7,14,9.5S12,14,9.5,14z"/></g>
+  <g id="arrow-back"><path d="M20,11H7.8l5.6-5.6L12,4l-8,8l8,8l1.4-1.4L7.8,13H20V11z"/></g>
 </defs></svg>
 
 <script>
@@ -39,7 +40,8 @@
     box: cloneIcon('#check-box-outline-blank'),
     drop: cloneIcon('#arrow-drop-down'),
     'info-outline': cloneIcon('#info-outline'),
-    'search': cloneIcon('#search')
+    search: cloneIcon('#search'),
+    back: cloneIcon('#arrow-back')
   };
 
 </script>
