--- a/skunkwerk/generation-3/polymer-1/projects/mail/elements/x-mailbar.html
+++ b/skunkwerk/generation-3/polymer-1/projects/mail/elements/x-mailbar.html
@@ -43,7 +43,7 @@
         <x-drop-button task><span>Mail</span></x-drop-button>
       </logospan>
 
-      <x-icon-button icon="apps"></x-icon-button>
+      <x-icon-button icon="back" on-click="backAction"></x-icon-button>
       <span>&nbsp;&nbsp;</span>
       <span>
         <x-icon-button icon="apps"></x-icon-button>
@@ -71,7 +71,10 @@
 <script>
 
   Polymer({
-    name: 'x-mailbar'
+    name: 'x-mailbar',
+    backAction: function() {
+      this.fire('back-action');
+    }
   });
 
 </script>
