polymer-5: streamline annotation code and data-structure

--- a/skunkwerk/generation-3/perf-test/index.html
+++ b/skunkwerk/generation-3/perf-test/index.html
@@ -6,10 +6,11 @@
 </head>
 <body style="background-color: whitesmoke;">
   
-  <frame-tester src="../polymer-1/projects/mail/app.html"></frame-tester>
-  <frame-tester src="../polymer-2/projects/mail/app.html"></frame-tester>
+  <!--<frame-tester src="../polymer-1/projects/mail/app.html"></frame-tester>-->
+  <!--<frame-tester src="../polymer-2/projects/mail/app.html"></frame-tester>-->
   <frame-tester src="../polymer-3/projects/mail/app.html"></frame-tester>
   <frame-tester src="../polymer-4/projects/mail/app.html"></frame-tester>
+  <frame-tester src="../polymer-5/projects/mail/app.html"></frame-tester>
   
   <template>
 
