--- a/skunkwerk/generation-3/polymer-5/projects/mail/elements/x-label.html
+++ b/skunkwerk/generation-3/polymer-5/projects/mail/elements/x-label.html
@@ -8,34 +8,23 @@
       margin: 6px 0;
       cursor: pointer;
     }
-    img {
-      width: 24px;
-      height: 24px;
-      vertical-align: middle;
-    }
   </style>
-
-  <div horizontal center layout>  
-    <img avatar src="[[avatar]]">&nbsp;<span>[[text]]</span>
-  </div>
   
+  <span>[[text]]</span>
 </template>
 
 <script>
 (function() {
 
-  var index = 0;
-  
   Polymer({
-    name: 'x-contact-item',
+    name: 'x-label',
     created: function() {
       this.publishProperty('item');
       this.watch('item', this.itemChanged.bind(this));
     },
     itemChanged: function(item) {
-      this.avatar = 'assets/avatar-0' + (index++ % 5) + '.png';
-      this.text = item.from + ' ' + item.count;
       this.style.fontWeight = item.count ? 'bold' : '';
+      this.text = item.from + ' ' + item.count;
       this.updateBindings();
     }
   });
