--- a/skunkwerk/generation-3/polymer-5/polymer/polymer.html
+++ b/skunkwerk/generation-3/polymer-5/polymer/polymer.html
@@ -8,7 +8,7 @@
 <link rel="import" href="data.html">
 <link rel="import" href="annotations.html">
 <link rel="import" href="bindings.html">
-<link rel="import" href="publish.html">
+<link rel="import" href="events.html">
 
 <script>
   Base.installFeatures();
