--- a/skunkwerk/generation-3/polymer-5/polymer/utils.html
+++ b/skunkwerk/generation-3/polymer-5/polymer/utils.html
@@ -4,16 +4,10 @@
     $: function(slctr) {
       return this.root.querySelector(slctr);
     },
-    fire: function(type, detail, onNode, bubbles, cancelable) {
-      var node = onNode || this;
-      var detail = (detail === null || detail === undefined) ? {} : detail;
-      var event = new CustomEvent(type, {
-        bubbles: bubbles !== undefined ? bubbles : true,
-        cancelable: cancelable !== undefined ? cancelable : true,
-        detail: detail
-      });
-      node.dispatchEvent(event);
-      return event;
+    bindModel: function(model, properties) {
+      properties.forEach(function(p) {
+        this.bindProperty(p, p, model);
+      }, this);
     }
   });
     
