--- a/skunkwerk/generation-3/polymer-5/projects/todomvc.greenfield.2/TodoModel.html
+++ b/skunkwerk/generation-3/polymer-5/projects/todomvc.greenfield.2/TodoModel.html
@@ -1,75 +1,60 @@
 <script>
   
   TodoModel = function(items) {
-    DataClient.init.call(this);
-    publishFeature.init.call(this);
+    this.init();
   };
+  
   var p = TodoModel.prototype = Object.create(DataClient);
-  extend(p, publishFeature);
+  
   extend(p, {
     published: [
       'items',
-      'count',
-      'completed',
       'filter',
-      'filtered'
     ],
-    push: function(item) {
-      this.items.push(item);
-      this.itemsChanged();
-    },
-    remove: function(item) {
-      var i = this.items.indexOf(item);
-      this.items.splice(i, 1);
-      this.itemsChanged();
-    },
     // TODO(sjmiles): items/filter is a good example of 
     // entangled data (see also: count/completed in the view).
     //
     // Changes to either need to trigger a refilter.
     // Sync changes to both should only trigger one refilter.
     // 
-    // There are various ad hoc ways to ignore this problem
-    // but they lead to Bad Things (tm). Debouncing properly
-    // is important.
+    // These entries create compound watches that use an async
+    // debouncing mechanism.
     //
-    // TODO(sjmiles): debounce computeFiltered
-    itemsChanged: function() {
-      this.computeCompleted();
-      this.computeCount();
-      this.computeFiltered();
+    // TODO(sjmiles): `computed` should also handle publishing
+    computed: {
+      completed: 'computeCompleted(items)',
+      filtered: 'computeFiltered(items, filter)'
     },
-    filterChanged: function() {
-      this.computeFiltered();
+    // TODO(sjmiles): create an array-abstraction that handles this 
+    // automatically? Or maybe a 'mutate' method, like:
+    // this.mutate('items', function(items) {
+    //  items.push(item);
+    // });
+    push: function(item) {
+      this.items.push(item);
+      this.itemChange();
     },
-    computeCount: function() {
-      this.count = compute(this.items);
-      // TODO(sjmiles): weird syntax is to highlight the state-free function 
-      function compute(items) {
-        return items.length;
-      }
+    remove: function(item) {
+      var i = this.items.indexOf(item);
+      this.items.splice(i, 1);
+      this.itemChange();
     },
-    computeCompleted: function() {
-      this.completed = compute(this.items);
-      // TODO(sjmiles): weird syntax is to highlight the state-free function 
-      function compute(items) {
-        var completed = 0;
-        items.forEach(function(i) {
-          i.completed && completed++;
-        });
-        return completed;
-      }
+    itemChange: function() {
+      this.notifyChange('items');
     },
-    computeFiltered: function(filters, filter, items) {
-      this.filtered = compute(this.filters, this.filter, this.items);
-      // TODO(sjmiles): weird syntax is to highlight the state-free function 
-      function compute(filters, filter, items) {
-        var fn = filters[filter];
-        // TODO(sjmiles): we cannot return `items` itself
-        // because manipulations to `items` (add/remove)
-        // are invisible to observers of `filtered`.
-        return fn ? items.filter(fn) : items.slice(0);
-      }
+    computeCompleted: function(items) {
+      var completed = 0;
+      items.forEach(function(i) {
+        i.completed && completed++;
+      });
+      return completed;
+    },
+    computeFiltered: function(items, filter) {
+      var fn = this.filters[filter];
+      // TODO(sjmiles): we cannot return `items` itself
+      // because manipulations to `items` (add/remove)
+      // are invisible to observers of `filtered`.
+      return fn ? items.filter(fn) : items.slice(0);
     },
     filters: {
       active: function(item) {
